crates/rome_js_formatter/tests/specs/prettier/typescript/keywords/keywords.ts.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: keywords.ts

---
# Input
```js
// All of these should be an error

module Y3 {
    public module Module {
        class A { s: string }
    }

    // Apparently this parses :P
    export private public protected static readonly abstract async enum X { }

    interface x {
        export private static readonly [x: any]: any;
    }
}

module Y4 {
    public enum Color { Blue, Red }
}

module YY3 {
    private module Module {
        class A { s: string }
    }
}

module YY4 {
    private enum Color { Blue, Red }
}

module YYY3 {
    static module Module {
        class A { s: string }
    }
}

module YYY4 {
    static enum Color { Blue, Red }
}

```

# Output
```js
// All of these should be an error

module Y3 {
  public
  module Module {
    class A {
      s: string;
    }
  }

  // Apparently this parses :P
    export
  private
  public
  protected
  static
  readonly;
  abstract;
  async;
  enum X {}

  interface x {
        export private static readonly [x: any]: any;
    }
}

module Y4 {
  public
  enum Color { Blue, Red }
}

module YY3 {
  private
  module Module {
    class A {
      s: string;
    }
  }
}

module YY4 {
  private
  enum Color { Blue, Red }
}

module YYY3 {
  static
  module Module {
    class A {
      s: string;
    }
  }
}

module YYY4 {
  static
  enum Color { Blue, Red }
}

```

# Errors
```
error[SyntaxError]: Illegal use of reserved keyword `public` as an identifier in strict mode
  ┌─ keywords.ts:4:5
  │
4 │     public module Module {
  │     ^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:4:12
  │
4 │     public module Module {
  │     -------^^^^^^
  │     │      │
  │     │      An explicit or implicit semicolon is expected here...
  │     ...Which is required to end this statement

error[SyntaxError]: expected a class, a function, or a variable declaration but instead found 'private'
  ┌─ keywords.ts:9:12
  │
9 │     export private public protected static readonly abstract async enum X { }
  │            ^^^^^^^ Expected a class, a function, or a variable declaration here

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:20
  │
9 │     export private public protected static readonly abstract async enum X { }
  │            --------^^^^^^
  │            │       │
  │            │       An explicit or implicit semicolon is expected here...
  │            ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:27
  │
9 │     export private public protected static readonly abstract async enum X { }
  │                    -------^^^^^^^^^
  │                    │      │
  │                    │      An explicit or implicit semicolon is expected here...
  │                    ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:37
  │
9 │     export private public protected static readonly abstract async enum X { }
  │                           ----------^^^^^^
  │                           │         │
  │                           │         An explicit or implicit semicolon is expected here...
  │                           ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:44
  │
9 │     export private public protected static readonly abstract async enum X { }
  │                                     -------^^^^^^^^
  │                                     │      │
  │                                     │      An explicit or implicit semicolon is expected here...
  │                                     ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:53
  │
9 │     export private public protected static readonly abstract async enum X { }
  │                                            ---------^^^^^^^^
  │                                            │        │
  │                                            │        An explicit or implicit semicolon is expected here...
  │                                            ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:62
  │
9 │     export private public protected static readonly abstract async enum X { }
  │                                                     ---------^^^^^
  │                                                     │        │
  │                                                     │        An explicit or implicit semicolon is expected here...
  │                                                     ...Which is required to end this statement

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ keywords.ts:9:68
  │
9 │     export private public protected static readonly abstract async enum X { }
  │                                                              ------^^^^
  │                                                              │     │
  │                                                              │     An explicit or implicit semicolon is expected here...
  │                                                              ...Which is required to end this statement

error[SyntaxError]: ';' expected'
   ┌─ keywords.ts:12:16
   │
12 │         export private static readonly [x: any]: any;
   │                ^^^^^^^ An explicit or implicit semicolon is expected here...

error[SyntaxError]: index signature members cannot be static
   ┌─ keywords.ts:12:24
   │
12 │         export private static readonly [x: any]: any;
   │                        ^^^^^^

error[SyntaxError]: Illegal use of reserved keyword `public` as an identifier in strict mode
   ┌─ keywords.ts:17:5
   │
17 │     public enum Color { Blue, Red }
   │     ^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ keywords.ts:17:12
   │
17 │     public enum Color { Blue, Red }
   │     -------^^^^
   │     │      │
   │     │      An explicit or implicit semicolon is expected here...
   │     ...Which is required to end this statement

error[SyntaxError]: Illegal use of reserved keyword `private` as an identifier in strict mode
   ┌─ keywords.ts:21:5
   │
21 │     private module Module {
   │     ^^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ keywords.ts:21:13
   │
21 │     private module Module {
   │     --------^^^^^^
   │     │       │
   │     │       An explicit or implicit semicolon is expected here...
   │     ...Which is required to end this statement

error[SyntaxError]: Illegal use of reserved keyword `private` as an identifier in strict mode
   ┌─ keywords.ts:27:5
   │
27 │     private enum Color { Blue, Red }
   │     ^^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ keywords.ts:27:13
   │
27 │     private enum Color { Blue, Red }
   │     --------^^^^
   │     │       │
   │     │       An explicit or implicit semicolon is expected here...
   │     ...Which is required to end this statement

error[SyntaxError]: Illegal use of reserved keyword `static` as an identifier in strict mode
   ┌─ keywords.ts:31:5
   │
31 │     static module Module {
   │     ^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ keywords.ts:31:12
   │
31 │     static module Module {
   │     -------^^^^^^
   │     │      │
   │     │      An explicit or implicit semicolon is expected here...
   │     ...Which is required to end this statement

error[SyntaxError]: Illegal use of reserved keyword `static` as an identifier in strict mode
   ┌─ keywords.ts:37:5
   │
37 │     static enum Color { Blue, Red }
   │     ^^^^^^

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ keywords.ts:37:12
   │
37 │     static enum Color { Blue, Red }
   │     -------^^^^
   │     │      │
   │     │      An explicit or implicit semicolon is expected here...
   │     ...Which is required to end this statement


```


